--- a/Optometria.ipynb
+++ b/Optometria.ipynb
@@ -167,39 +167,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-61-8e1aad7dc796>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moptometria_dep\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Requiere_Gafas'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moptometria_dep\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ESTUCHE Y PAÑO'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0moptometria_dep\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'MONTURA'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#1 Tiene gafas, 0 no tiene\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1553\u001b[0m             \u001b[0;34m\"The truth value of a {0} is ambiguous. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1554\u001b[0m             \"Use a.empty, a.bool(), a.item(), a.any() or a.all().\".format(\n\u001b[0;32m-> 1555\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__class__\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1556\u001b[0m             )\n\u001b[1;32m   1557\u001b[0m         )\n",
-      "\u001b[0;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
-     ]
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "/Users/yosel/Library/Python/3.7/lib/python/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \nA value is trying to be set on a copy of a slice from a DataFrame.\nTry using .loc[row_indexer,col_indexer] = value instead\n\nSee the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n  \"\"\"Entry point for launching an IPython kernel.\n"
     }
    ],
    "source": [
-    "optometria_dep['Requiere_Gafas'] = np.where((optometria_dep['ESTUCHE Y PAÑO'] == 1) and (optometria_dep['MONTURA'] == 1,1,0)) #1 Tiene gafas, 0 no tiene"
+    "optometria_dep['Requiere_Gafas'] = np.where((optometria_dep['ESTUCHE Y PAÑO'] == 1) & (optometria_dep['MONTURA'] == 1) ,1,0) #1 Tiene gafas, 0 no tiene"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
-     "text": "<class 'pandas.core.frame.DataFrame'>\nInt64Index: 8151 entries, 0 to 8150\nData columns (total 30 columns):\nEDAD              8149 non-null float64\nCONSULTA          8149 non-null float64\nESTUCHE Y PAÑO    7792 non-null float64\nMONTURA           7792 non-null float64\nDX\nPPAL\nCIE 10    8148 non-null object\nESFERA-OD         8146 non-null object\nCILINDRO-OD       4629 non-null object\nEJE-OD            4622 non-null float64\nADD-OD            5251 non-null object\nTIPO LENTE-OD     8149 non-null object\nESFERA-OI         8144 non-null object\nCILINDRO-OI       4666 non-null object\nEJE-OI            4644 non-null object\nADD-OI            5245 non-null object\nTIPO LENTE-OI     8149 non-null object\nGenero            7835 non-null object\nUsa_Gafas         7408 non-null object\nGlaucoma          6892 non-null object\nEnfermedad        2392 non-null object\nocupacion         7635 non-null object\nDir_Res           7833 non-null object\npoblacion         7160 non-null object\netnia             7412 non-null object\nExam_ojos         7597 non-null object\nUsa_Gafas         7408 non-null object\nTiem_gafas        5569 non-null object\nDescripcion       7159 non-null object\nSISBEN            7601 non-null object\nCOD_BARRIO        7822 non-null object\nAstigmatismo      8151 non-null int64\ndtypes: float64(5), int64(1), object(24)\nmemory usage: 2.2+ MB\n"
+     "text": "/Users/yosel/Library/Python/3.7/lib/python/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \nA value is trying to be set on a copy of a slice from a DataFrame.\nTry using .loc[row_indexer,col_indexer] = value instead\n\nSee the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n  \"\"\"Entry point for launching an IPython kernel.\n/Users/yosel/Library/Python/3.7/lib/python/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \nA value is trying to be set on a copy of a slice from a DataFrame.\nTry using .loc[row_indexer,col_indexer] = value instead\n\nSee the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n  \n/Users/yosel/Library/Python/3.7/lib/python/site-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \nA value is trying to be set on a copy of a slice from a DataFrame.\nTry using .loc[row_indexer,col_indexer] = value instead\n\nSee the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n  This is separate from the ipykernel package so we can avoid doing imports until\n"
     }
    ],
    "source": [
-    "optometria_dep.info()"
+    "optometria_dep['Hipertension'] = optometria_dep['Enfermedad'].map(lambda x: str(x).upper().find('H')>0)\n",
+    "optometria_dep['Diabetes'] = optometria_dep['Enfermedad'].map(lambda x: str(x).upper().find('D')>0)\n",
+    "optometria_dep['Glaucoma'] = optometria_dep['Enfermedad'].map(lambda x: str(x).upper().find('G')>0)"
    ]
   },
   {
