--- a/Optometria.ipynb
+++ b/Optometria.ipynb
@@ -2087,13 +2087,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "Accuracy: 0.83 (+/- 0.04)\n"
+     "text": "Recall: 0.74 (+/- 0.09)\n"
     }
    ],
    "source": [
@@ -2103,15 +2103,15 @@
     "arbol_ast.fit(x_est_ast, y_est_ast)\n",
     "\n",
     "#Se toma k = 10 como valor común en el campo de acción de ML\n",
-    "cv_scores = cross_val_score(arbol_ast_fit, X_ast, y_ast, cv=10) #, scoring='recall'\n",
-    "print(\"Accuracy: %0.2f (+/- %0.2f)\" % (cv_scores.mean(), cv_scores.std() * 2))"
+    "cv_scores = cross_val_score(arbol_ast_fit, X_ast, y_ast, cv=10, scoring='f1')\n",
+    "print(\"Recall: %0.2f (+/- %0.2f)\" % (cv_scores.mean(), cv_scores.std() * 2))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Por árboles de decisión con cross validation tomando 10 divisiones de la data, tenemos un promedio de 83."
+    "Por árboles de decisión con cross validation tomando 10 divisiones de la data y como medida de validación el f1-score para equilibar la precision y el recall, tenemos que el modelo es efectivo en un 74%."
    ]
   },
   {
@@ -2184,8 +2184,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Por regresión lógistica"
+    "Por regresión lógistica, a partir de la matriz de confusión tenemos:\n",
+    "\n",
+    "De 1606 pacientes cuyo diagnóstico principal no era astigmatismo, el modelo dijo que efectivamente no tenian astigmatismo 1277, equivale a un 70%, se equivoco en 329 pacientes a los cuales les dijo que si tenían astigmatismo, lo cual equivale a un 20%\n",
+    "Para los pacientes con astigmatismo, en total se tenían 827 personas, el modelo predice que de esos 827 pacientes, 212 no tiene astigmatismo (25%) y 615 si lo tenían (74%).\n",
+    "\n",
+    "Si bien las métricas con este modelo sin utilizar cross validation (por efectos del ejercicio académico) son bajas, se concluye:\n",
+    "* En un 78% el modelo predice bien las clases astigmatismo y no astigmatismo (accuracy). \n",
+    "* En un 74% el modelo clasificó correctamente la clase de astigmatismo para todos los valores que realmente eran astigmatismo (recall). Esto significa que 212 pacientes se quedaron sin recibir un diagnóstico correcto de un total de 827 personas.\n",
+    "* De los valores que el modelo catalogó como astigmatismo, un 65% de ellos realmente eran astigmatismo (precision). En este caso, se diagnóstico como astigmatismo en su diagnóstico principal a 329 pacientes, lo cual no es correcto.\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Redes Neuronales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
