--- a/Optometria.ipynb
+++ b/Optometria.ipynb
@@ -3690,7 +3690,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Árbol de decisiones**"
+        "### **Árbol de decisiones**"
       ]
     },
     {
@@ -3801,7 +3801,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Regresión lógistica**"
+        "### **Regresión lógistica**"
       ]
     },
     {
@@ -4000,7 +4000,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### Conclusiones"
+        "Conclusiones"
       ]
     },
     {
